--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -14,7 +14,7 @@
                 <i class="dropdown icon"></i> แบบสอบทานระบบการควบคุมภายใน
                 <div class="menu" style="margin:20px;">
                     <a class="item" [routerLink]="['/int02/1']" routerLinkActive="active">สร้างแบบสอบทานระบบการควบคุมภายใน</a>
-                    <a class="item" [routerLink]="['/int02/m2']" routerLinkActive="active">สร้างแบแบบสอบทานระบบการควบคุมภายใน (หน่วยงาน)บสอบทานระบบการควบคุมภายใน</a>
+                    <a class="item" [routerLink]="['/int02/m2']" routerLinkActive="active">แบบสอบทานระบบการควบคุมภายใน</a>
                     <a class="item" [routerLink]="['/int02/m3']" routerLinkActive="active">สรุปผลแบบสอบทานระบบการควบคุมภายใน</a>
                     <a class="item" [routerLink]="['/int02/m4']" routerLinkActive="active">จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</a>
                 </div>
