--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3.component.html
@@ -1,3 +1,117 @@
-<p>
-    int02-m3 works!
-</p>
+<div class="ui modal show transition hidden" style="height: calc(6em + 15px);">
+    <i class="close icon"></i>
+    <div class="header">
+        ด้านแบบสอบทานระบบการควบคุมภายใน
+    </div>
+    <div class="ui form content">
+        <div class="inline fields">
+            <div class="four wide field">
+                &nbsp;
+            </div>
+            <div class="one wide field">
+                <label class="custom-label-w-20">ด้าน</label>
+            </div>
+            <div class="seven wide field">
+                <input type="text">
+            </div>
+            <div class="four wide field">
+                &nbsp;
+            </div>
+        </div>
+    </div>
+    <div class="actions">
+        <div class="ui green button">บันทึก</div>
+        <div class="ui red button" id="closeList">ยกเลิก</div>
+    </div>
+</div>
+
+<div class="ui grid" style="margin: 2%">
+    <div class="sixteen wide column segments">
+        <div class="ui attached segment">
+            <div class="ui grid">
+                <div class="ui centered twelve wide column">
+                    <div class="ui form">
+                        <div class="inline fields">
+                            <div class="eight wide field" style="text-align: center">
+                                <label class="custom-label-w-30" style="background: #1e83db;color: white">1. ด้านแบบสอบทานระบบการควบคุมภายใน</label>
+                            </div>
+                            <div class="two wide field">
+                                &nbsp;
+                            </div>
+                            <div class="eight wide field" style="text-align: center">
+                                <label class="custom-label-w-30" style="background: #1e83db;color: white">2. รายละเอียดแบบสอบทานระบบการควบคุมภายใน</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+                    <span>จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</span>
+                </div>
+
+
+                <div class="centered fifteen wide column ">
+                    <div class="inline fields">
+                        <div class="eight wide field" style="text-align: right">
+                            <button class="ui mini green button" type="button" id="showList">
+                                <i class="add icon"></i>
+                                เพิ่ม
+                            </button>
+                            <button class="ui mini red button" type="button">
+                                <i class="trash icon"></i>
+                                ลบ
+                            </button>
+                        </div>
+                    </div>
+                    <table id="datatable" class="ui small celled table aligned hover">
+                        <thead>
+                            <tr>
+                                <th style="text-align: center !important"><input type="checkbox"></th>
+                                <th style="text-align: center !important">ที่</th>
+                                <th style="text-align: center !important">ด้านแบบสอบทานระบบการควบคุมภายใน</th>
+                                <th colspan="2" style="text-align: center !important">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="center"><input type="checkbox"></td>
+                                <td>Cell</td>
+                                <td>Cell</td>
+                                <td class="center">
+                                    <button class="ui mini orange button" type="button">
+                                        <i class="pencil icon"></i>
+                                        แก้ไข
+                                    </button>
+                                </td>
+                                <td class="center">
+                                    <button class="ui mini green button" type="button">
+                                        <i class="search icon"></i>
+                                        รายละเอียด
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+
+            </div>
+        </div>
+
+        <!-- <div class="ui bottom centered attached segment">
+                <div class="ui center aligned grid">
+                    <div class="eight wide column">
+                        <button class="ui mini green button" type="submit">
+                        <i class="save icon"></i>
+                        สร้างเอกสาร
+                    </button>
+                        <button class="ui mini red button" (click)="onDiscard(false)" type="reset">
+                        <i class="times icon"></i>
+                        ยกเลิก
+                    </button>
+                    </div>
+                </div>
+            </div> -->
+
+    </div>
+</div>
