--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
@@ -30,22 +30,15 @@
       <div class="ui grid ">
         <div class="sixteen wide column ">
 
-          <table id="datatable " class="ui small celled table aligned hover ">
+          <table id="datatable" class="ui small celled table aligned hover ">
             <thead>
               <tr>
-                <th style="text-align: center !important ;width: 5%"><input type="checkbox" name=""></th>
+                <th style="text-align: center !important ;width: 5%"></th>
                 <th style="text-align: center !important ;width: 95%">รายการ</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let d of detail; let i = index">
-                  <td>
-                     
-                  </td>
-                  <td>
-                  
-                  </td>
-              </tr>
+              
             </tbody>
           </table>
 
