--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -13,7 +13,9 @@
             <label>ชื่อกระดาษทำการ :</label>
           </div>
           <div class="eight wide field">
-            <input type="text" maxlength="1000" [(ngModel)]="hdr.workSheetHeaderName" name="workSheetHeaderName" required>
+            <div class="ui {{view&&'disabled'}} input">
+              <input type="text" maxlength="1000" [(ngModel)]="hdr.workSheetHeaderName" name="workSheetHeaderName" required>
+            </div>
           </div>
         </div>
         <div class="inline fields">
@@ -23,7 +25,9 @@
             </label>
           </div>
           <div class="eight wide field">
-            <input type="text" [(ngModel)]="hdr.departmentName" name="departmentName" required>
+            <div class="ui {{view&&'disabled'}} input">
+              <input type="text" [(ngModel)]="hdr.departmentName" name="departmentName" required>
+            </div>
           </div>
         </div>
 
@@ -32,7 +36,7 @@
             <label>วันที่ :</label>
           </div>
           <div class="ui calendar" id="example2">
-            <div class="ui input left icon">
+            <div class="ui {{view&&'disabled'}} input left icon">
               <i class="calendar icon"></i>
               <input type="text" placeholder="วว/ดด/ปปปป" [(ngModel)]="hdr.startDate" autocomplete="off" [attr.readonly]="null" id="startDate"
                 name="startDate" [attr.required]="true">
@@ -46,7 +50,7 @@
             </label>
           </div>
           <div class="ui calendar" id="example3">
-            <div class="ui input left icon">
+            <div class="ui {{view&&'disabled'}} input left icon">
               <i class="calendar icon"></i>
               <input type="text" placeholder="วว/ดด/ปปปป" [(ngModel)]="hdr.endDate" autocomplete="off" [attr.readonly]="null" id="endDate"
                 name="endDate" [attr.required]="true">
@@ -58,18 +62,20 @@
             <label>รายละเอียด :</label>
           </div>
           <div class="eight wide field">
-            <input type="text" class="disabled" [(ngModel)]="hdr.description" name="description">
+            <div class="ui {{view&&'disabled'}} input">
+              <input type="text" [(ngModel)]="hdr.description" name="description">
+            </div>
           </div>
         </div>
       </div>
     </div>
     <br>
 
-    <div class="ui top centered attached header segment" id="create" style="background: #1e83db;color: white">
+    <div class="ui top centered attached header segment" *ngIf="!view" id="create" style="background: #1e83db;color: white">
       <span>สร้างกระดาษทำการประมาณการค่าใช้จ่ายในการเดินทางไปราชการ </span>
     </div>
     <br>
-    <div class="ui grid center aligned">
+    <div class="ui grid center aligned" *ngIf="!view">
       <div class="ui two wide column">&nbsp;</div>
       <div class="ui center aligned thirteen wide  column">
 
@@ -174,7 +180,7 @@
       </div>
     </div>
     <div class="ui center aligned grid">
-      <div class="eight wide column">
+      <div class="eight wide column" *ngIf="!view">
         <button class="ui mini yellow button" type="submit" *ngIf="status === 'edit'">
           แก้ไข
         </button>
@@ -232,7 +238,8 @@
           <td>{{d.note}}</td>
 
           <td>
-            <button class="ui mini orange button" type="button" (click)="editData(i)">แก้ไข</button>
+            <button *ngIf="!view" class="ui mini orange button" type="button" (click)="editData(i)">แก้ไข</button>
+            <button *ngIf="view" class="ui mini primary button" type="button" (click)="contractPdf(i)">สัญญาการยืมเงิน</button>
           </td>
         </tr>
         <tr>
@@ -253,7 +260,7 @@
       </tbody>
     </table>
     <br>
-    <div class="ui center aligned grid">
+    <div class="ui center aligned grid" *ngIf="!view">
       <div class="eight wide column">
         <button class="ui {{checkedElements()&&'disabled'}} mini red button" type="button" (click)="deleteData()">
           ลบ
@@ -264,7 +271,6 @@
         <button class="ui mini primary button" type="button">
           ส่งออก
         </button>
-        <button *ngIf="this.headerId !== undefined" class="ui mini primary button" type="button" routerLink="/int09/2">สัญญาการยืมเงิน</button>
       </div>
     </div>
   </div>
