new menu int10/1

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -124,7 +124,7 @@
             <div class="ui dropdown item" routerLinkActive="active">
                 <i class="dropdown icon"></i>รายงานผลการตรวจสอบภาษี
                 <div class="menu">
-                    <a class="item" routerLinkActive="active">รายงานผลการตรวจสอบภาษี </a>
+                    <a class="item" [routerLink]="['/int10/1']" routerLinkActive="active">รายงานผลการตรวจสอบภาษี </a>
                     <a class="item" routerLinkActive="active">ติดตามผลการตรวจสอบภาษี </a>
                 </div>
             </div>
