--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
@@ -2,18 +2,18 @@
   <span> สัญญาการยืมเงิน</span>
 </div>
 
-<form class="ui attached  segment">
+<form (ngSubmit)="contractPdf($event)" ngNativeValidate class="ui attached segment">
   <div class="ui right aligned grid">
     <div class="sixteen wide column">
-      <button class="ui mini primary button">
-        Export
+      <button class="ui mini primary button" type="submit">
+        PDF
       </button>
     </div>
   </div>
   <div class="ui grid center aligned">
 
     <div class="ui one wide column">&nbsp;</div>
-    <div class="ui center aligned thirteen wide  column">
+    <div class="ui center aligned thirteen wide column">
       <div class="ui form center aligned">
 
         <div class="inline fields">
@@ -21,7 +21,7 @@
             <label>ยื่นต่อ :</label>
           </div>
           <div class="seven wide field">
-            <input type="text">
+            <input type="text" name="sendTo" [(ngModel)]="body.sendTo" required>
           </div>
           <div class="two wide field">
             <label>
@@ -53,7 +53,7 @@
             <label>ข้าพเจ้า :</label>
           </div>
           <div class="three wide field">
-            <input type="text">
+            <input type="text" name="loanName" [(ngModel)]="body.loanName" required>
           </div>
           <div class="two wide field">
             <label>
@@ -61,7 +61,7 @@
             </label>
           </div>
           <div class="three wide field">
-            <input type="text" class="disabled">
+            <input type="text" name="positionName" [(ngModel)]="body.positionName" required>
           </div>
           <div class="two wide field">
             <label>
@@ -69,7 +69,7 @@
             </label>
           </div>
           <div class="three wide field">
-            <input type="text" class="disabled">
+            <input type="text" name="locateAt" [(ngModel)]="body.locateAt" required>
           </div>
         </div>
         <div class="inline fields">
@@ -77,7 +77,7 @@
             <label>มีความประสงค์ขอยืมเงินจาก :</label>
           </div>
           <div class="eleven wide field">
-            <input type="text" class="disabled">
+            <input type="text" name="loanFrom" [(ngModel)]="body.loanFrom" required>
           </div>
         </div>
         <div class="inline fields">
@@ -89,7 +89,7 @@
         </div>
         <div class="inline fields">
           <div class="fifteen wide field">
-            <textarea name="" id="" rows="2" style="resize: none"></textarea>
+            <textarea name="reasonTxt" [(ngModel)]="body.reasonTxt" rows="2" style="resize: none" required></textarea>
           </div>
         </div>
         <div class="inline fields">
@@ -108,17 +108,17 @@
           </div>
           <div class="ten wide field"></div>
           <div class="column" style="width: 20%;">
-            <br> 26,220.00
-            <br> 83,600.00
-            <br> 12,550.00
-            <br> 230.00
+            <br> {{ toCommaAndDecimal(body.allowanceCost) }}
+            <br> {{ toCommaAndDecimal(body.rentCost) }}
+            <br> {{ toCommaAndDecimal(body.travelCost) }}
+            <br> {{ toCommaAndDecimal(body.otherCost) }}
           </div>
         </div>
         <br>
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-16" style="width: 17% !important;">(ตัวอักษร</label>
-            <input type="text" style="width: 100%">
+            <input type="text" name="sumCostTxt" [(ngModel)]="body.sumCostTxt" style="width: 100%" disabled>
             <label></label>
           </div>
           <div class="two wide field">
@@ -126,7 +126,7 @@
           </div>
           <div class="three wide field"></div>
           <div class="two wide field">
-            122,600.00
+            {{ toCommaAndDecimal(body.sumCost) }}
           </div>
         </div>
         <br>
@@ -139,7 +139,7 @@
             ระเบียบการจ่ายเงินจากคลัง คือภายใน
           </div>
           <div class="four wide field">
-            <input type="text" name="">
+            <input type="text" name="day" [(ngModel)]="body.day" required>
           </div>
           <p> วัน นับแต่วันที่เดินทางกลับมาถึง ถ้าข้าพเจ้าไม่ส่งตามกำหนด</p>
         </div>
@@ -153,7 +153,13 @@
           </div>
           <div class="eight wide field">
             <label class="custom-label-w-16" style="width: 17% !important;">วันที่ :</label>
-            <input type="text" style="width: 100%">
+            <div class="ui calendar" id="calendar" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="calendar icon"></i>
+                <input type="text" placeholder="วว/ดด/ปปปป" [(ngModel)]="body.dateFixed" autocomplete="off" [attr.readonly]="null" id="dateFixed"
+                  name="dateFixed" [attr.required]="true">
+              </div>
+            </div>
             <label></label>
           </div>
         </div>
@@ -161,7 +167,7 @@
           <div class="one wide field"></div>
           <div class="six wide field">
             <label class="custom-label-w-18">(</label>
-            <input type="text" style="width: 100%">
+            <input type="text" name="loanNameShw" [ngModel]="body.loanName" style="width: 100%; text-align: center">
             <label></label>
           </div>
           <div class="two wide field">
@@ -177,16 +183,16 @@
             <label> เสนอ :</label>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="presentTo" [(ngModel)]="body.presentTo" required>
           </div>
           <div class="nine wide field">
-            ได้ตรวจสอบแล้ว เห็นสมควรอนุมัติให้ยืมตามใบยืมฉบับนี้ได้ จำนวน 122,600.00 บาท
+            ได้ตรวจสอบแล้ว เห็นสมควรอนุมัติให้ยืมตามใบยืมฉบับนี้ได้ จำนวน {{ toCommaAndDecimal(body.sumCost) }} บาท
           </div>
         </div>
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-18" style="width: 17% !important;">(ตัวอักษร</label>
-            <input type="text" style="width: 100%">
+            <input type="text" name="sumCostTxt2" [ngModel]="body.sumCostTxt" style="width: 100%" disabled>
             <label></label>
           </div>
           <div class="two wide field">
@@ -223,11 +229,11 @@
 
         <div class="inline fields">
           <div class="nine wide field">
-            อนุมัติให้ยืมตามเงื่อนไขข้างต้นได้ เป็นเงิน 122,600.00 บาท
+            อนุมัติให้ยืมตามเงื่อนไขข้างต้นได้ เป็นเงิน {{ toCommaAndDecimal(body.sumCost) }} บาท
           </div>
           <div class="eight wide field">
             <label class="custom-label-w-20">(ตัวอักษร</label>
-            <input type="text" style="width: 100%">
+            <input type="text" name="sumCostTxt3" [ngModel]="body.sumCostTxt" style="width: 100%" disabled>
           </div>
           <div class="two wide field">
             <label>)&nbsp;</label>
@@ -262,11 +268,11 @@
         <br>
         <div class="inline fields">
           <div class="four wide field">
-            ได้รับเงินยืมจำนวน 122,600.00 บาท
+            ได้รับเงินยืมจำนวน {{ toCommaAndDecimal(body.sumCost) }} บาท
           </div>
           <div class="eight wide field">
             <label class="custom-label-w-20">(ตัวอักษร</label>
-            <input type="text" style="width: 100%">
+            <input type="text" name="sumCostTxt4" [ngModel]="body.sumCostTxt" style="width: 100%" disabled>
           </div>
           <div class="four wide field">
             <label>) &nbsp; ไปเป็นการถูกต้องแล้ว
